// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main snapshot should match to snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ViewMessage
    activeTab="SENT"
    content={
      Object {
        "sentPageTitle": "sentPageTitle",
      }
    }
    dispatch={
      [MockFunction] {
        "calls": Array [
          Array [
            [Function],
          ],
        ],
      }
    }
    location={
      Object {
        "messageDetail": Object {
          "status": "sent",
        },
      }
    }
    messages={
      Object {
        "draftError": true,
        "filter": [MockFunction],
        "successModal": true,
      }
    }
    messagesFetched={
      Object {
        "fetching": false,
        "successModal": false,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <Row>
        <Card
          bordered={false}
        >
          <SectionHeading
            className="u-margin-bottom-2"
            heading1={undefined}
          />
          <Connect(withRouter(withMessaging))
            activeTab="SENT"
            content={
              Object {
                "sentPageTitle": "sentPageTitle",
              }
            }
            dispatch={
              [MockFunction] {
                "calls": Array [
                  Array [
                    [Function],
                  ],
                ],
              }
            }
            location={
              Object {
                "messageDetail": Object {
                  "status": "sent",
                },
              }
            }
            messages={
              Object {
                "draftError": true,
                "filter": [MockFunction],
                "successModal": true,
              }
            }
            messagesFetched={
              Object {
                "fetching": false,
                "successModal": false,
              }
            }
            newMessageStatus="sent"
          />
        </Card>
      </Row>,
      "className": "u-margin-top-6",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Card
          bordered={false}
        >
          <SectionHeading
            className="u-margin-bottom-2"
            heading1={undefined}
          />
          <Connect(withRouter(withMessaging))
            activeTab="SENT"
            content={
              Object {
                "sentPageTitle": "sentPageTitle",
              }
            }
            dispatch={
              [MockFunction] {
                "calls": Array [
                  Array [
                    [Function],
                  ],
                ],
              }
            }
            location={
              Object {
                "messageDetail": Object {
                  "status": "sent",
                },
              }
            }
            messages={
              Object {
                "draftError": true,
                "filter": [MockFunction],
                "successModal": true,
              }
            }
            messagesFetched={
              Object {
                "fetching": false,
                "successModal": false,
              }
            }
            newMessageStatus="sent"
          />
        </Card>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "bordered": false,
          "children": Array [
            <SectionHeading
              className="u-margin-bottom-2"
              heading1={undefined}
            />,
            <Connect(withRouter(withMessaging))
              activeTab="SENT"
              content={
                Object {
                  "sentPageTitle": "sentPageTitle",
                }
              }
              dispatch={
                [MockFunction] {
                  "calls": Array [
                    Array [
                      [Function],
                    ],
                  ],
                }
              }
              location={
                Object {
                  "messageDetail": Object {
                    "status": "sent",
                  },
                }
              }
              messages={
                Object {
                  "draftError": true,
                  "filter": [MockFunction],
                  "successModal": true,
                }
              }
              messagesFetched={
                Object {
                  "fetching": false,
                  "successModal": false,
                }
              }
              newMessageStatus="sent"
            />,
            Array [],
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "className": "u-margin-bottom-2",
              "heading1": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeTab": "SENT",
              "content": Object {
                "sentPageTitle": "sentPageTitle",
              },
              "dispatch": [MockFunction] {
                "calls": Array [
                  Array [
                    [Function],
                  ],
                ],
              },
              "location": Object {
                "messageDetail": Object {
                  "status": "sent",
                },
              },
              "messages": Object {
                "draftError": true,
                "filter": [MockFunction],
                "successModal": true,
              },
              "messagesFetched": Object {
                "fetching": false,
                "successModal": false,
              },
              "newMessageStatus": "sent",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Row>
          <Card
            bordered={false}
          >
            <SectionHeading
              className="u-margin-bottom-2"
              heading1={undefined}
            />
            <Connect(withRouter(withMessaging))
              activeTab="SENT"
              content={
                Object {
                  "sentPageTitle": "sentPageTitle",
                }
              }
              dispatch={
                [MockFunction] {
                  "calls": Array [
                    Array [
                      [Function],
                    ],
                  ],
                }
              }
              location={
                Object {
                  "messageDetail": Object {
                    "status": "sent",
                  },
                }
              }
              messages={
                Object {
                  "draftError": true,
                  "filter": [MockFunction],
                  "successModal": true,
                }
              }
              messagesFetched={
                Object {
                  "fetching": false,
                  "successModal": false,
                }
              }
              newMessageStatus="sent"
            />
          </Card>
        </Row>,
        "className": "u-margin-top-6",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Card
            bordered={false}
          >
            <SectionHeading
              className="u-margin-bottom-2"
              heading1={undefined}
            />
            <Connect(withRouter(withMessaging))
              activeTab="SENT"
              content={
                Object {
                  "sentPageTitle": "sentPageTitle",
                }
              }
              dispatch={
                [MockFunction] {
                  "calls": Array [
                    Array [
                      [Function],
                    ],
                  ],
                }
              }
              location={
                Object {
                  "messageDetail": Object {
                    "status": "sent",
                  },
                }
              }
              messages={
                Object {
                  "draftError": true,
                  "filter": [MockFunction],
                  "successModal": true,
                }
              }
              messagesFetched={
                Object {
                  "fetching": false,
                  "successModal": false,
                }
              }
              newMessageStatus="sent"
            />
          </Card>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bordered": false,
            "children": Array [
              <SectionHeading
                className="u-margin-bottom-2"
                heading1={undefined}
              />,
              <Connect(withRouter(withMessaging))
                activeTab="SENT"
                content={
                  Object {
                    "sentPageTitle": "sentPageTitle",
                  }
                }
                dispatch={
                  [MockFunction] {
                    "calls": Array [
                      Array [
                        [Function],
                      ],
                    ],
                  }
                }
                location={
                  Object {
                    "messageDetail": Object {
                      "status": "sent",
                    },
                  }
                }
                messages={
                  Object {
                    "draftError": true,
                    "filter": [MockFunction],
                    "successModal": true,
                  }
                }
                messagesFetched={
                  Object {
                    "fetching": false,
                    "successModal": false,
                  }
                }
                newMessageStatus="sent"
              />,
              Array [],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "u-margin-bottom-2",
                "heading1": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeTab": "SENT",
                "content": Object {
                  "sentPageTitle": "sentPageTitle",
                },
                "dispatch": [MockFunction] {
                  "calls": Array [
                    Array [
                      [Function],
                    ],
                  ],
                },
                "location": Object {
                  "messageDetail": Object {
                    "status": "sent",
                  },
                },
                "messages": Object {
                  "draftError": true,
                  "filter": [MockFunction],
                  "successModal": true,
                },
                "messagesFetched": Object {
                  "fetching": false,
                  "successModal": false,
                },
                "newMessageStatus": "sent",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenFourAdapter {
      "options": Object {
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
          "getChildContext": Object {
            "calledByRenderer": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`View Message snapshot should match to snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ViewMessage
    activeTab="SENT"
    content={
      Object {
        "back": "Back",
      }
    }
    dispatch={
      [MockFunction] {
        "calls": Array [
          Array [
            [Function],
          ],
        ],
      }
    }
    location={
      Object {
        "messageDetail": Object {
          "status": "NEW",
        },
      }
    }
    messages={
      Object {
        "draftError": true,
        "filter": [MockFunction],
        "successModal": true,
      }
    }
    messagesFetched={
      Object {
        "fetching": false,
        "successModal": false,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <Row>
        <Card
          bordered={false}
        >
          <SectionHeading
            className="u-margin-bottom-2"
            heading1={undefined}
          />
          <Connect(withRouter(withMessaging))
            activeTab="SENT"
            content={
              Object {
                "back": "Back",
              }
            }
            dispatch={
              [MockFunction] {
                "calls": Array [
                  Array [
                    [Function],
                  ],
                ],
              }
            }
            location={
              Object {
                "messageDetail": Object {
                  "status": "NEW",
                },
              }
            }
            messages={
              Object {
                "draftError": true,
                "filter": [MockFunction],
                "successModal": true,
              }
            }
            messagesFetched={
              Object {
                "fetching": false,
                "successModal": false,
              }
            }
            newMessageStatus="READ"
          />
        </Card>
      </Row>,
      "className": "u-margin-top-6",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Card
          bordered={false}
        >
          <SectionHeading
            className="u-margin-bottom-2"
            heading1={undefined}
          />
          <Connect(withRouter(withMessaging))
            activeTab="SENT"
            content={
              Object {
                "back": "Back",
              }
            }
            dispatch={
              [MockFunction] {
                "calls": Array [
                  Array [
                    [Function],
                  ],
                ],
              }
            }
            location={
              Object {
                "messageDetail": Object {
                  "status": "NEW",
                },
              }
            }
            messages={
              Object {
                "draftError": true,
                "filter": [MockFunction],
                "successModal": true,
              }
            }
            messagesFetched={
              Object {
                "fetching": false,
                "successModal": false,
              }
            }
            newMessageStatus="READ"
          />
        </Card>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "bordered": false,
          "children": Array [
            <SectionHeading
              className="u-margin-bottom-2"
              heading1={undefined}
            />,
            <Connect(withRouter(withMessaging))
              activeTab="SENT"
              content={
                Object {
                  "back": "Back",
                }
              }
              dispatch={
                [MockFunction] {
                  "calls": Array [
                    Array [
                      [Function],
                    ],
                  ],
                }
              }
              location={
                Object {
                  "messageDetail": Object {
                    "status": "NEW",
                  },
                }
              }
              messages={
                Object {
                  "draftError": true,
                  "filter": [MockFunction],
                  "successModal": true,
                }
              }
              messagesFetched={
                Object {
                  "fetching": false,
                  "successModal": false,
                }
              }
              newMessageStatus="READ"
            />,
            Array [],
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "className": "u-margin-bottom-2",
              "heading1": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeTab": "SENT",
              "content": Object {
                "back": "Back",
              },
              "dispatch": [MockFunction] {
                "calls": Array [
                  Array [
                    [Function],
                  ],
                ],
              },
              "location": Object {
                "messageDetail": Object {
                  "status": "NEW",
                },
              },
              "messages": Object {
                "draftError": true,
                "filter": [MockFunction],
                "successModal": true,
              },
              "messagesFetched": Object {
                "fetching": false,
                "successModal": false,
              },
              "newMessageStatus": "READ",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Row>
          <Card
            bordered={false}
          >
            <SectionHeading
              className="u-margin-bottom-2"
              heading1={undefined}
            />
            <Connect(withRouter(withMessaging))
              activeTab="SENT"
              content={
                Object {
                  "back": "Back",
                }
              }
              dispatch={
                [MockFunction] {
                  "calls": Array [
                    Array [
                      [Function],
                    ],
                  ],
                }
              }
              location={
                Object {
                  "messageDetail": Object {
                    "status": "NEW",
                  },
                }
              }
              messages={
                Object {
                  "draftError": true,
                  "filter": [MockFunction],
                  "successModal": true,
                }
              }
              messagesFetched={
                Object {
                  "fetching": false,
                  "successModal": false,
                }
              }
              newMessageStatus="READ"
            />
          </Card>
        </Row>,
        "className": "u-margin-top-6",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Card
            bordered={false}
          >
            <SectionHeading
              className="u-margin-bottom-2"
              heading1={undefined}
            />
            <Connect(withRouter(withMessaging))
              activeTab="SENT"
              content={
                Object {
                  "back": "Back",
                }
              }
              dispatch={
                [MockFunction] {
                  "calls": Array [
                    Array [
                      [Function],
                    ],
                  ],
                }
              }
              location={
                Object {
                  "messageDetail": Object {
                    "status": "NEW",
                  },
                }
              }
              messages={
                Object {
                  "draftError": true,
                  "filter": [MockFunction],
                  "successModal": true,
                }
              }
              messagesFetched={
                Object {
                  "fetching": false,
                  "successModal": false,
                }
              }
              newMessageStatus="READ"
            />
          </Card>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bordered": false,
            "children": Array [
              <SectionHeading
                className="u-margin-bottom-2"
                heading1={undefined}
              />,
              <Connect(withRouter(withMessaging))
                activeTab="SENT"
                content={
                  Object {
                    "back": "Back",
                  }
                }
                dispatch={
                  [MockFunction] {
                    "calls": Array [
                      Array [
                        [Function],
                      ],
                    ],
                  }
                }
                location={
                  Object {
                    "messageDetail": Object {
                      "status": "NEW",
                    },
                  }
                }
                messages={
                  Object {
                    "draftError": true,
                    "filter": [MockFunction],
                    "successModal": true,
                  }
                }
                messagesFetched={
                  Object {
                    "fetching": false,
                    "successModal": false,
                  }
                }
                newMessageStatus="READ"
              />,
              Array [],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "u-margin-bottom-2",
                "heading1": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeTab": "SENT",
                "content": Object {
                  "back": "Back",
                },
                "dispatch": [MockFunction] {
                  "calls": Array [
                    Array [
                      [Function],
                    ],
                  ],
                },
                "location": Object {
                  "messageDetail": Object {
                    "status": "NEW",
                  },
                },
                "messages": Object {
                  "draftError": true,
                  "filter": [MockFunction],
                  "successModal": true,
                },
                "messagesFetched": Object {
                  "fetching": false,
                  "successModal": false,
                },
                "newMessageStatus": "READ",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenFourAdapter {
      "options": Object {
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
          "getChildContext": Object {
            "calledByRenderer": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
